handling CORS origine

--- a/exemple.env
+++ b/exemple.env
@@ -1,5 +1,8 @@
 SA_PASSWORD=Str0ng!Passw0rd
 
+FRONTEND_URL=http://yourFrontUrl
+
+
 DATABASE_SERVER=your_server
 DATABASE_NAME=your_database
 DATABASE_USER=your_user
